# mycobot_project

./: .gitignore  README.md  blob_detect.py  camera.py  coordinate_control_test.py  draw_heart.py  ducky_detector.py  face_detector.py  main.py  mediapipe_face_detect.py  mycobot280_face_track_test.py  mycobot_manager.py  pick_and_place.py
legacy/: README.md  hsv_tuning.py  main.py  mediapipe_face_detect.py
legacy/test_scripts/: async_move_test.py  camera_test.py  coordinate_control_test.py  gripper_calib.py
pi/: camera_stream.py  mjpg_streamer.service  mycobot_server.service  server.py  setup_pi.sh  start_services.sh
scripts/: sync_to_pi.sh
src/mycobot_bringup/: CMakeLists.txt  package.xml
src/mycobot_bringup/config/: network.yaml
src/mycobot_bringup/launch/: moveit_bringup.launch.py  robot_bringup.launch.py
src/mycobot_camera/: package.xml  setup.cfg  setup.py
src/mycobot_camera/launch/: camera.launch.py
src/mycobot_camera/mycobot_camera/: camera_node.py
src/mycobot_description/: CMakeLists.txt  package.xml
src/mycobot_description/launch/: display.launch.py
src/mycobot_description/urdf/: mycobot_280pi.urdf.xacro
src/mycobot_driver/: package.xml  setup.cfg  setup.py
src/mycobot_driver/launch/: driver.launch.py
src/mycobot_driver/mycobot_driver/: gripper_node.py  mycobot_hardware_node.py  scene_objects.py  teach_poses.py
src/mycobot_moveit_config/: CMakeLists.txt  package.xml
src/mycobot_moveit_config/config/: joint_limits.yaml  mycobot_280pi.srdf  obstacles.yaml  ompl_planning.yaml
src/mycobot_moveit_config/launch/: demo.launch.py
src/mycobot_moveit_config/rviz/: moveit.rviz
src/mycobot_perception/: package.xml  setup.cfg  setup.py
src/mycobot_perception/launch/: food_detector.launch.py
src/mycobot_perception/mycobot_perception/: food_detector_node.py
test_scripts/: gripper_calib.py  gripper_test.py
