<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files for myCobot 280 Pi</description>
  <maintainer email="genozen@todo.com">genozen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mycobot_description</exec_depend>
  <exec_depend>mycobot_driver</exec_depend>
  <exec_depend>mycobot_camera</exec_depend>
  <exec_depend>mycobot_moveit_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
