<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_perception</name>
  <version>0.1.0</version>
  <description>Vision/perception nodes for myCobot 280 Pi (YOLOv11 food detection)</description>
  <maintainer email="genozen@todo.com">genozen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!-- ultralytics is installed via pip, not rosdep -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
